--- a/index.html
+++ b/index.html
@@ -22,8 +22,67 @@ video {
   text-align: center;
   color: #ffffff;
 }
-
 </style>
+<style>
+     .image-grid {
+           display: flex;
+           flex-wrap: wrap;
+           justify-content: space-between;
+           /* 确保每行最多显示三张图片 */
+           max-width: 1800px;
+           margin: 0 auto;
+       }
+
+     .image-grid img {
+           /* 每张图片宽度为三分之一，减去左右边距 */
+           width: calc(33.33% - 10px);
+           margin: 5px;
+           box-sizing: border-box;
+           cursor: pointer;
+       }
+
+     .modal {
+           display: none;
+           position: fixed;
+           z-index: 1;
+           padding-top: 100px;
+           left: 0;
+           top: 0;
+           width: 100%;
+           height: 100%;
+           overflow: auto;
+           background-color: rgba(0, 0, 0, 0.9);
+       }
+
+     .modal-content {
+           margin: auto;
+           display: block;
+           width: 80%;
+           max-width: 700px;
+       }
+
+     .close {
+           position: absolute;
+           top: 15px;
+           right: 35px;
+           color: #f1f1f1;
+           font-size: 40px;
+           font-weight: bold;
+           transition: 0.3s;
+       }
+
+     .close:hover,
+     .close:focus {
+           color: #bbb;
+           text-decoration: none;
+           cursor: pointer;
+       }
+
+     .w3-center.w3-padding-32 {
+           margin-top: 20px;
+       }
+   </style>
+
 </head>
 <body class="w3-light-grey w3-content" style="max-width:1600px">
 
@@ -52,115 +111,104 @@ video {
   <div class="w3-hide-large" style="margin-top:83px"></div>
 
   <!-- Photo grid -->
+  <div class="item1"><h1>Photography</h1></div>
   <div class="w3-row">
-    <div class="w3-third">
-      <img src="picture/IMG_7919.jpg" style="width:100%" onclick="onClick(this)" alt="Seaside at dusk">
-      <img src="picture/IMG_7832.JPG" style="width:100%" onclick="onClick(this)" alt="Witness of love">
-      <img src="picture/IMG_20240525_155701.JPG" style="width:100%" onclick="onClick(this)" alt="Idyllic dream house">
-    </div>
 
-    <div class="w3-third">
-      <img src="picture/IMG_20220827_115744.jpg" style="width:100%" onclick="onClick(this)" alt="The horizon line between sky and earth">
-      <img src="picture/IMG_20221126_164555.JPG" style="width:100%" onclick="onClick(this)" alt="Get some fries on the pier">
-      <img src="picture/IMG_20230110_145557.JPG" style="width:100%" onclick="onClick(this)" alt="Nature again.. At its finest!">
-    </div>
-
-    <div class="w3-third">
-      <img src="picture/IMG_20230402_235012.JPG" style="width:100%" onclick="onClick(this)" alt="Stroll through the garden">
-      <img src="picture/IMG_20230110_153813.JPG" style="width:100%" onclick="onClick(this)" alt="Its miniature world">
-      <img src="picture/IMG_20230402_234901.JPG" style="width:100%" onclick="onClick(this)" alt="What a beautiful day!">
-    </div>
     <div class="image-grid">
-            <img src="https://picsum.photos/600/400?random=1" style="width:30%" onclick="onClick(this)" alt="Seaside at dusk">
-            <img src="https://picsum.photos/600/400?random=2" style="width:30%" onclick="onClick(this)" alt="Witness of love">
-            <img src="https://picsum.photos/600/400?random=3" style="width:30%" onclick="onClick(this)" alt="Idyllic dream house">
-            <img src="https://picsum.photos/600/400?random=4" style="width:30%" onclick="onClick(this)" alt="The horizon line between sky and earth">
-            <img src="https://picsum.photos/600/400?random=5" style="width:30%" onclick="onClick(this)" alt="Get some fries on the pier">
-            <img src="https://picsum.photos/600/400?random=6" style="width:30%" onclick="onClick(this)" alt="Nature again.. At its finest!">
-            <img src="https://picsum.photos/600/400?random=7" style="width:30%" onclick="onClick(this)" alt="Stroll through the garden">
-            <img src="https://picsum.photos/600/400?random=8" style="width:30%" onclick="onClick(this)" alt="Its miniature world">
-            <img src="https://picsum.photos/600/400?random=9" style="width:30%" onclick="onClick(this)" alt="What a beautiful day!">
-        </div>
+            <img src="picture/IMG_7919.jpg" onclick="onClick(this)" alt="Seaside at dusk">
+            <img src="picture/IMG_7832.JPG" onclick="onClick(this)" alt="Witness of love">
+            <img src="picture/IMG_20240525_155701.JPG" onclick="onClick(this)" alt="Idyllic dream house">
+            <img src="picture/IMG_20220827_115744.jpg" onclick="onClick(this)" alt="The horizon line between sky and earth">
+            <img src="picture/IMG_20221126_164555.JPG" onclick="onClick(this)" alt="Get some fries on the pier">
+            <img src="picture/IMG_20230110_145557.JPG" onclick="onClick(this)" alt="Nature again.. At its finest!">
+            <img src="picture/IMG_20230402_235012.JPG" onclick="onClick(this)" alt="Stroll through the garden">
+            <img src="picture/IMG_20230110_153813.JPG" onclick="onClick(this)" alt="Its miniature world">
+            <img src="picture/IMG_20230402_234901.JPG" onclick="onClick(this)" alt="What a beautiful day!">
+    </div>
+
   <!-- Pagination -->
   <div class="w3-center w3-padding-32">
-      <div class="w3-bar">
-          <a href="#" class="w3-bar-item w3-button w3-hover-black" onclick="prevPage()">&laquo;</a>
-          <a href="#" class="w3-bar-item w3-black w3-button" onclick="goToPage(1)">1</a>
-          <a href="#" class="w3-bar-item w3-button w3-hover-black" onclick="goToPage(2)">2</a>
-          <a href="#" class="w3-bar-item w3-button w3-hover-black" onclick="goToPage(3)">3</a>
-          <a href="#" class="w3-bar-item w3-button w3-hover-black" onclick="goToPage(4)">4</a>
-          <a href="#" class="w3-bar-item w3-button w3-hover-black" onclick="nextPage()">&raquo;</a>
-      </div>
-  </div>
+         <div class="w3-bar">
+             <a href="#" class="w3-bar-item w3-button w3-hover-black" onclick="prevPage()">&laquo;</a>
+             <a href="#" class="w3-bar-item w3-black w3-button" onclick="goToPage(1)">1</a>
+             <a href="#" class="w3-bar-item w3-button w3-hover-black" onclick="goToPage(2)">2</a>
+             <a href="#" class="w3-bar-item w3-button w3-hover-black" onclick="goToPage(3)">3</a>
+             <a href="#" class="w3-bar-item w3-button w3-hover-black" onclick="nextPage()">&raquo;</a>
+         </div>
+     </div>
 
-  <div id="myModal" class="modal">
-      <span class="close" onclick="closeModal()">&times;</span>
-      <img class="modal-content" id="modalImg">
-  </div>
+     <!-- 模态框 -->
+     <div id="myModal" class="modal">
+         <span class="close" onclick="closeModal()">&times;</span>
+         <img class="modal-content" id="modalImg">
+     </div>
 
-  <script>
-      const images = document.querySelectorAll('.iw3-third img');
-      const paginationLinks = document.querySelectorAll('.w3-bar a');
-      const modal = document.getElementById('myModal');
-      const modalImg = document.getElementById('modalImg');
-      let currentPage = 1;
-      const imagesPerPage = 3;
+     <script>
+         const images = document.querySelectorAll('.image-grid img');
+         const paginationLinks = document.querySelectorAll('.w3-bar a');
+         const modal = document.getElementById('myModal');
+         const modalImg = document.getElementById('modalImg');
+         let currentPage = 1;
+         const imagesPerPage = 3;
 
-      function onClick(img) {
-          modal.style.display = "block";
-          modalImg.src = img.src;
-      }
+         function onClick(img) {
+             modal.style.display = "block";
+             modalImg.src = img.src;
+         }
 
-      function closeModal() {
-          modal.style.display = "none";
-      }
+         function closeModal() {
+             modal.style.display = "none";
+         }
 
-      function goToPage(page) {
-          currentPage = page;
-          updatePagination();
-          //
-          images.forEach(image => {
-              image.style.display = 'none';
-          });
-          //
-          const startIndex = (currentPage - 1) * imagesPerPage;
-          const endIndex = startIndex + imagesPerPage;
-          for (let i = startIndex; i < endIndex && i < images.length; i++) {
-              images[i].style.display = 'block';
-          }
-      }
+         function goToPage(page) {
+             currentPage = page;
+             updatePagination();
+             // 隐藏所有图片
+             images.forEach(image => {
+                 image.style.display = 'none';
+             });
+             // 显示当前页的图片
+             const startIndex = (currentPage - 1) * imagesPerPage;
+             const endIndex = startIndex + imagesPerPage;
+             for (let i = startIndex; i < endIndex && i < images.length; i++) {
+                 images[i].style.display = 'block';
+             }
+         }
 
-      function prevPage() {
-          if (currentPage > 1) {
-              currentPage--;
-              goToPage(currentPage);
-          }
-      }
+         function prevPage() {
+             if (currentPage > 1) {
+                 currentPage--;
+                 goToPage(currentPage);
+             }
+         }
 
-      function nextPage() {
-          const totalPages = Math.ceil(images.length / imagesPerPage);
-          if (currentPage < totalPages) {
-              currentPage++;
-              goToPage(currentPage);
-          }
-      }
+         function nextPage() {
+             const totalPages = Math.ceil(images.length / imagesPerPage);
+             if (currentPage < totalPages) {
+                 currentPage++;
+                 goToPage(currentPage);
+             }
+         }
 
-      function updatePagination() {
-          paginationLinks.forEach(link => {
-              link.classList.remove('w3-black');
-          });
-          paginationLinks[currentPage].classList.add('w3-black');
-      }
+         function updatePagination() {
+             paginationLinks.forEach(link => {
+                 link.classList.remove('w3-black');
+             });
+             // 修正索引，因为链接索引从 0 开始
+             paginationLinks[currentPage].classList.add('w3-black');
+         }
 
-      goToPage(1);
-  </script>
+         // 初始化显示第一页的图片
+         goToPage(1);
+     </script>
+
 <!--video-->
 <div>
   <div class="item1"><h1>Video</h1></div>
     <video width="70%" controls>
     <source src="video/teklab_new.mp4" type="video/mp4">
     </video>
-    <p><div class="item1"><a href="https://www.youtube.com/@Katsun-Ngan" <button class="w3-button w3-block w3-grey w3-margin-bottom">More video</button></div></a></p>
+    <p><a href="https://www.youtube.com/@Katsun-Ngan" <button class="w3-button w3-block w3-grey w3-margin-bottom">More video</button></a></p>
 </div>
 
   <!-- Modal for full size images on click-->
@@ -228,41 +276,7 @@ Cantonese and English. In his spare time, Jun also enjoys traveling and photogra
   </div>
 
   <!-- Footer -->
-  <footer class="w3-container w3-padding-32 w3-grey">
-    <div class="w3-row-padding">
-      <div class="w3-third">
-        <h3>INFO</h3>
-        <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
-      </div>
 
-      <div class="w3-third">
-        <h3>BLOG POSTS</h3>
-        <ul class="w3-ul">
-          <li class="w3-padding-16 w3-hover-black">
-            <img src="/w3images/workshop.jpg" class="w3-left w3-margin-right" style="width:50px">
-            <span class="w3-large">Lorem</span><br>
-            <span>Sed mattis nunc</span>
-          </li>
-          <li class="w3-padding-16 w3-hover-black">
-            <img src="/w3images/gondol.jpg" class="w3-left w3-margin-right" style="width:50px">
-            <span class="w3-large">Ipsum</span><br>
-            <span>Praes tinci sed</span>
-          </li>
-        </ul>
-      </div>
-
-      <div class="w3-third">
-        <h3>POPULAR TAGS</h3>
-        <p>
-          <span class="w3-tag w3-black w3-margin-bottom">Travel</span> <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">New York</span> <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">London</span>
-          <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">IKEA</span> <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">NORWAY</span> <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">DIY</span>
-          <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">Ideas</span> <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">Baby</span> <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">Family</span>
-          <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">News</span> <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">Clothing</span> <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">Shopping</span>
-          <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">Sports</span> <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">Games</span>
-        </p>
-      </div>
-    </div>
-  </footer>
 
   <div class="w3-black w3-center w3-padding-24">Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-opacity">w3.css</a></div>
 
